Fix group nested columns alignments

--- a/assets/css/blocks/block-library/_variables.scss
+++ b/assets/css/blocks/block-library/_variables.scss
@@ -18,7 +18,7 @@ $mobile-text-min-font-size: 16px; // Any font size below 16px will cause Mobile 
 // Grid size
 $grid-size-small: 4px;
 $grid-size: 8px;
-$grid-size-large: 16px;
+$grid-size-large: 1em;
 
 // Widths, heights & dimensions
 $panel-padding: 16px;
