--- a/assets/css/blocks/columns.css
+++ b/assets/css/blocks/columns.css
@@ -90,16 +90,16 @@
 }
 @media (min-width: 600px) {
   .wp-block-column {
-    flex-basis: calc(50% - 16px);
+    flex-basis: calc(50% - 1em);
     flex-grow: 0;
   }
   .wp-block-column:nth-child(even) {
-    margin-left: 32px;
+    margin-left: 2em;
   }
 }
 @media (min-width: 782px) {
   .wp-block-column:not(:first-child) {
-    margin-left: 32px;
+    margin-left: 2em;
   }
 }
 
