--- a/grid-parts/styles/content/styles-large.scss
+++ b/grid-parts/styles/content/styles-large.scss
@@ -25,4 +25,19 @@
 			}
 		}
 	}
+
+	.wp-block-group {
+		>* {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.wp-block-columns:not(.alignfull):not(.alignwide) {
+			max-width: calc(var(--gridd-content-max-width-calculated) + 2em);
+		}
+
+		.wp-block-column {
+			flex-basis: 50%;
+		}
+	}
 }
